--- a/product.html
+++ b/product.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>hello guys welcome to my page</h1>
+    <p>This is done to pull req -changes made on remote</p>
 </body>
 </html>
