--- a/product.html
+++ b/product.html
@@ -8,5 +8,7 @@
 <body>
     <h1>hello guys welcome to my page</h1>
     <p> This is an example for pull req locally </p>
+    <p> This is an example for pull req remotely </p>
+    
 </body>
 </html>
